Small fix with overflow.

--- a/togethernetwork/static/css/style.css
+++ b/togethernetwork/static/css/style.css
@@ -1,6 +1,6 @@
 body {
-    overflow-y: auto;
-    overflow-x: hidden;
+    overflow-y: hidden;
+    overflow-x: auto;
 }
 
 /* Homepage */
